--- a/m1/musos.html
+++ b/m1/musos.html
@@ -6,7 +6,7 @@
 <link href="mainsytle.css" rel="stylesheet" type="text/css">
 </head>
 <div class="container"><header><img src="images/TCMC98Neg.gif" alt="TMC Logo">Townsville Music Center</header>
-<nav><a href="home.html">Home</a> - <a href="livehouse.html">Live House Music</a> - <a href="#">Musos</a> - <a href="events.html">Events</a> - <a href="bullitinboard.html">Bullitin Board</a> - Become a member</nav>
+<nav><a href="home.html">Home</a><a href="#">Musos</a><a href="events.html">Events</a><a href="bullitinboard.html">Bullitin Board</a><a href="livehouse.html">Live House Music</a>Become a member</nav>
 
 <body><div class="musos">
 <h1>Habourside Duo</h1><br>
@@ -23,6 +23,7 @@ Tickets are available at:<br>
 <ul>Phone: 4727 9797</ul>
 <ul>Townsville Civic Theatre</ul>
 <ul>Riverway Arts Center</ul> </p></div>
+
 <div class="musos">
 <h1>Habourside Duo</h1><br>
 <img alt="haboursideduo">
@@ -39,8 +40,54 @@ Tickets are available at:<br>
 <ul>Townsville Civic Theatre</ul>
 <ul>Riverway Arts Center</ul> </p></div>
 
+<div class="musos">
+<h1>Habourside Duo</h1><br>
+<img alt="haboursideduo">
+<p>Presents Dream Serenade.<br>
+Music of Debussy, Ravel, Saint-Saens, Sibelius and others. March into Sommarhagen!<br>
+Dance the Habanera with the Girl with the Flaxen Hair!<br>
+Be seduced by Thais! Or just relax and let the music wash over you.<br>
+2pm Sunday, 17th May at C2 (Townsville Civic Theatre)<br>
+$25 Adult - $20 Concession - Children 12 and under get in free!<br>
+<br>
+Tickets are available at:<br>
+<ul>www.ticketshop.com.au</ul>
+<ul>Phone: 4727 9797</ul>
+<ul>Townsville Civic Theatre</ul>
+<ul>Riverway Arts Center</ul> </p></div>
 
+<div class="musos">
+<h1>Habourside Duo</h1><br>
+<img alt="haboursideduo">
+<p>Presents Dream Serenade.<br>
+Music of Debussy, Ravel, Saint-Saens, Sibelius and others. March into Sommarhagen!<br>
+Dance the Habanera with the Girl with the Flaxen Hair!<br>
+Be seduced by Thais! Or just relax and let the music wash over you.<br>
+2pm Sunday, 17th May at C2 (Townsville Civic Theatre)<br>
+$25 Adult - $20 Concession - Children 12 and under get in free!<br>
+<br>
+Tickets are available at:<br>
+<ul>www.ticketshop.com.au</ul>
+<ul>Phone: 4727 9797</ul>
+<ul>Townsville Civic Theatre</ul>
+<ul>Riverway Arts Center</ul></p></div>
 
 </p>
 </body>
+<footer><div class="sponsor">
+Sponsors:<br>
+Townsville City Council<br>
+The council's Partnerships and Sponserships scheme provides vital core funding
+which enables us to maintain the admnistrative base for all our other activities,
+and also provides the premises which house our office space.
+The council also assists with the performance venues for our concerts and workshops.
+Queensland Government
+The Gambling Community Benefit Fund has assisted us to obtain office equipment and sound and lighting equipment for our productions.</div>
+<div class="contactdetails">
+Contact Details:<br>
+Phone: 07 4724 2086<br>
+Mobile: 0402 255 182<br>
+Postal Address: PO Box 1006, Townsville, Qld 4810<br>
+Address  Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810<br></div>
+</footer>
 </html>
