--- a/m1/musos.html
+++ b/m1/musos.html
@@ -10,7 +10,7 @@
 
 <body><div class="musos">
 <h1>Habourside Duo</h1><br>
-<img alt="haboursideduo">
+<img src="images/Harbourside.jpg" alt="haboursideduo">
 <p>Presents Dream Serenade.<br>
 Music of Debussy, Ravel, Saint-Saens, Sibelius and others. March into Sommarhagen!<br>
 Dance the Habanera with the Girl with the Flaxen Hair!<br>
@@ -26,7 +26,7 @@ Tickets are available at:<br>
 
 <div class="musos">
 <h1>Habourside Duo</h1><br>
-<img alt="haboursideduo">
+<img src="images/Harbourside.jpg" alt="haboursideduo">
 <p>Presents Dream Serenade.<br>
 Music of Debussy, Ravel, Saint-Saens, Sibelius and others. March into Sommarhagen!<br>
 Dance the Habanera with the Girl with the Flaxen Hair!<br>
@@ -42,7 +42,7 @@ Tickets are available at:<br>
 
 <div class="musos">
 <h1>Habourside Duo</h1><br>
-<img alt="haboursideduo">
+<img src="images/Harbourside.jpg" alt="haboursideduo">
 <p>Presents Dream Serenade.<br>
 Music of Debussy, Ravel, Saint-Saens, Sibelius and others. March into Sommarhagen!<br>
 Dance the Habanera with the Girl with the Flaxen Hair!<br>
@@ -58,7 +58,7 @@ Tickets are available at:<br>
 
 <div class="musos">
 <h1>Habourside Duo</h1><br>
-<img alt="haboursideduo">
+<img src="images/Harbourside.jpg" alt="haboursideduo">
 <p>Presents Dream Serenade.<br>
 Music of Debussy, Ravel, Saint-Saens, Sibelius and others. March into Sommarhagen!<br>
 Dance the Habanera with the Girl with the Flaxen Hair!<br>
