--- a/m1/events.html
+++ b/m1/events.html
@@ -6,20 +6,36 @@
 <link href="mainsytle.css" rel="stylesheet" type="text/css">
 </head>
 <div class="container"><header><img src="images/TCMC98Neg.gif" alt="TMC Logo">Townsville Music Center</header>
-<nav><a href="home.html">Home</a> - Live House Music - Musos - <a href="#">Events</a> - Bullitin Board - Become a member</nav>
+<nav><a href="home.html">Home</a><a href="musos.html">Muscicians</a><a href="events.html">Events</a><a href="bullitinboard.html">Bullitin Board</a><a href="livehouse.html">Live House Music</a>Become a member</nav>
 
 
 
-<body><div class="content">
-content goes here<br>
-content goes here<br>
-content goes here<br>
-content goes here<br>
-content goes here<br>
-content goes here<br>
+<body><div class="events">
+<h1>Harbourside Duo</h1>
+<img src="images/Harbourside.jpg" alt="harboursideduo"</img>
+<p>Music of Debussy, Ravel, Saint-Saens, sibelius and others. March into Sommarhagen!<br>
+Be seduced by Thais! Or just relax and let the music wash over you.<br>2PM Sunday, 17th May at C2 (Townsville Civic Theatre)<br>
+$25 Adult - $20 Concession - Children 12 and under get in free!.<br>
+Tickets are available at:<br>
+<ul>www.ticketshop.com.au</ul>
+<ul>Phone: 4727 9797</ul>
+<ul>Townsville Civic Theatre</ul>
+<ul>Riverway Arts Center</ul></p></div>
+<div class="events">
+<h1>Harbourside Duo</h1>
+<a href="musos.html#harboursideduo"><img src="images/Harbourside.jpg" alt="harboursideduo"/></a>
+<p>Music of Debussy, Ravel, Saint-Saens, sibelius and others. March into Sommarhagen!<br>
+Be seduced by Thais! Or just relax and let the music wash over you.<br>2PM Sunday, 17th May at C2 (Townsville Civic Theatre)<br>
+$25 Adult - $20 Concession - Children 12 and under get in free!<br>
+Tickets are available at:<br>
+<ul>www.ticketshop.com.au</ul>
+<ul>Phone: 4727 9797</ul>
+<ul>Townsville Civic Theatre</ul>
+<ul>Riverway Arts Center</ul></p>
 
-
-</div></body>
+</div>    
+    
+</body>
 <footer>
 Townsville Music Center
 </footer>
