--- a/m1/musos.html
+++ b/m1/musos.html
@@ -2,61 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Musos</title>
+<title>Townsville Music Centre - Musicians</title>
 <link href="mainsytle.css" rel="stylesheet" type="text/css">
 </head>
-<div class="container"><header><img src="images/TCMC98Neg.gif" alt="TMC Logo">Townsville Music Center</header>
-<nav><a href="home.html">Home</a><a href="#">Musos</a><a href="events.html">Events</a><a href="bullitinboard.html">Bullitin Board</a><a href="livehouse.html">Live House Music</a>Become a member</nav>
+<div class="container"><header><img src="images/TCMC98Neg.gif" alt="TMC Logo">Townsville Music Centre</header>
+<nav><a href="home.html">Home</a><a href="musos.html">Muscicians</a><a href="events.html">Events</a><a href="bullitinboard.html">Bullitin Board</a><a href="livehouse.html">Live House Music</a>Become a member</nav>
 
-<body><div class="musos">
-<h1>Habourside Duo</h1><br>
-<img src="images/Harbourside.jpg" alt="haboursideduo">
-<p>Presents Dream Serenade.<br>
-Music of Debussy, Ravel, Saint-Saens, Sibelius and others. March into Sommarhagen!<br>
-Dance the Habanera with the Girl with the Flaxen Hair!<br>
-Be seduced by Thais! Or just relax and let the music wash over you.<br>
-2pm Sunday, 17th May at C2 (Townsville Civic Theatre)<br>
-$25 Adult - $20 Concession - Children 12 and under get in free!<br>
-<br>
-Tickets are available at:<br>
-<ul>www.ticketshop.com.au</ul>
-<ul>Phone: 4727 9797</ul>
-<ul>Townsville Civic Theatre</ul>
-<ul>Riverway Arts Center</ul> </p></div>
-
-<div class="musos">
-<h1>Habourside Duo</h1><br>
-<img src="images/Harbourside.jpg" alt="haboursideduo">
-<p>Presents Dream Serenade.<br>
-Music of Debussy, Ravel, Saint-Saens, Sibelius and others. March into Sommarhagen!<br>
-Dance the Habanera with the Girl with the Flaxen Hair!<br>
-Be seduced by Thais! Or just relax and let the music wash over you.<br>
-2pm Sunday, 17th May at C2 (Townsville Civic Theatre)<br>
-$25 Adult - $20 Concession - Children 12 and under get in free!<br>
-<br>
-Tickets are available at:<br>
-<ul>www.ticketshop.com.au</ul>
-<ul>Phone: 4727 9797</ul>
-<ul>Townsville Civic Theatre</ul>
-<ul>Riverway Arts Center</ul> </p></div>
-
-<div class="musos">
-<h1>Habourside Duo</h1><br>
-<img src="images/Harbourside.jpg" alt="haboursideduo">
-<p>Presents Dream Serenade.<br>
-Music of Debussy, Ravel, Saint-Saens, Sibelius and others. March into Sommarhagen!<br>
-Dance the Habanera with the Girl with the Flaxen Hair!<br>
-Be seduced by Thais! Or just relax and let the music wash over you.<br>
-2pm Sunday, 17th May at C2 (Townsville Civic Theatre)<br>
-$25 Adult - $20 Concession - Children 12 and under get in free!<br>
-<br>
-Tickets are available at:<br>
-<ul>www.ticketshop.com.au</ul>
-<ul>Phone: 4727 9797</ul>
-<ul>Townsville Civic Theatre</ul>
-<ul>Riverway Arts Center</ul> </p></div>
-
-<div class="musos">
+<body><div class="musos1">
 <h1>Habourside Duo</h1><br>
 <img src="images/Harbourside.jpg" alt="haboursideduo">
 <p>Presents Dream Serenade.<br>
@@ -71,6 +23,54 @@ Tickets are available at:<br>
 <ul>Phone: 4727 9797</ul>
 <ul>Townsville Civic Theatre</ul>
 <ul>Riverway Arts Center</ul></p></div>
+
+<div class="musos2">
+<h1>Habourside Duo</h1><br>
+<img src="images/Harbourside.jpg" alt="haboursideduo">
+<p>Presents Dream Serenade.<br>
+Music of Debussy, Ravel, Saint-Saens, Sibelius and others. March into Sommarhagen!<br>
+Dance the Habanera with the Girl with the Flaxen Hair!<br>
+Be seduced by Thais! Or just relax and let the music wash over you.<br>
+2pm Sunday, 17th May at C2 (Townsville Civic Theatre)<br>
+$25 Adult - $20 Concession - Children 12 and under get in free!<br>
+<br>
+Tickets are available at:<br>
+<ul>www.ticketshop.com.au</ul>
+<ul>Phone: 4727 9797</ul>
+<ul>Townsville Civic Theatre</ul>
+<ul>Riverway Arts Center</ul></p></div>
+
+<div class="musos1">
+<h1>Habourside Duo</h1><br>
+<img src="images/Harbourside.jpg" alt="haboursideduo">
+<p>Presents Dream Serenade.<br>
+Music of Debussy, Ravel, Saint-Saens, Sibelius and others. March into Sommarhagen!<br>
+Dance the Habanera with the Girl with the Flaxen Hair!<br>
+Be seduced by Thais! Or just relax and let the music wash over you.<br>
+2pm Sunday, 17th May at C2 (Townsville Civic Theatre)<br>
+$25 Adult - $20 Concession - Children 12 and under get in free!<br>
+<br>
+Tickets are available at:<br>
+<ul>www.ticketshop.com.au</ul>
+<ul>Phone: 4727 9797</ul>
+<ul>Townsville Civic Theatre</ul>
+<ul>Riverway Arts Center</ul> </p></div>
+
+<div class="musos2"><a name="harboursideduo">
+<h1>Habourside Duo</h1><br>
+<img src="images/Harbourside.jpg" alt="haboursideduo">
+<p>Presents Dream Serenade.<br>
+Music of Debussy, Ravel, Saint-Saens, Sibelius and others. March into Sommarhagen!<br>
+Dance the Habanera with the Girl with the Flaxen Hair!<br>
+Be seduced by Thais! Or just relax and let the music wash over you.<br>
+2pm Sunday, 17th May at C2 (Townsville Civic Theatre)<br>
+$25 Adult - $20 Concession - Children 12 and under get in free!<br>
+<br>
+Tickets are available at:<br>
+<ul>www.ticketshop.com.au</ul>
+<ul>Phone: 4727 9797</ul>
+<ul>Townsville Civic Theatre</ul>
+<ul>Riverway Arts Center</ul></p></a></div>
 
 </p>
 </body>
