--- a/m1/musos.html
+++ b/m1/musos.html
@@ -8,7 +8,7 @@
 <div class="container"><header><img src="images/TCMC98Neg.gif" alt="TMC Logo">Townsville Music Centre</header>
 <nav><a href="home.html">Home</a><a href="musos.html">Muscicians</a><a href="events.html">Events</a><a href="bullitinboard.html">Bullitin Board</a><a href="livehouse.html">Live House Music</a>Become a member</nav>
 
-<body><div class="musos1">
+<body><div class="musos col m-1col m-2col">
 <h1>Habourside Duo</h1><br>
 <img src="images/Harbourside.jpg" alt="haboursideduo">
 <p>Presents Dream Serenade.<br>
@@ -24,7 +24,7 @@ Tickets are available at:<br>
 <ul>Townsville Civic Theatre</ul>
 <ul>Riverway Arts Center</ul></p></div>
 
-<div class="musos2">
+<div class="musos col m-1col m-2col">
 <h1>Habourside Duo</h1><br>
 <img src="images/Harbourside.jpg" alt="haboursideduo">
 <p>Presents Dream Serenade.<br>
@@ -40,7 +40,7 @@ Tickets are available at:<br>
 <ul>Townsville Civic Theatre</ul>
 <ul>Riverway Arts Center</ul></p></div>
 
-<div class="musos1">
+<div class="musos col m-1col m-2col">
 <h1>Habourside Duo</h1><br>
 <img src="images/Harbourside.jpg" alt="haboursideduo">
 <p>Presents Dream Serenade.<br>
@@ -56,7 +56,7 @@ Tickets are available at:<br>
 <ul>Townsville Civic Theatre</ul>
 <ul>Riverway Arts Center</ul> </p></div>
 
-<div class="musos2"><a name="harboursideduo">
+<div class="musos col m-1col m-2col"><a name="harboursideduo">
 <h1>Habourside Duo</h1><br>
 <img src="images/Harbourside.jpg" alt="haboursideduo">
 <p>Presents Dream Serenade.<br>
