--- a/m1/musos.html
+++ b/m1/musos.html
@@ -7,7 +7,9 @@
 </head>
 <div class="container"><header><img src="images/TCMC98Neg.gif" alt="TMC Logo">Townsville Music Centre</header>
 <nav><a href="home.html">Home</a><a href="musos.html">Muscicians</a><a href="events.html">Events</a><a href="bullitinboard.html">Bullitin Board</a><a href="livehouse.html">Live House Music</a>Become a member</nav>
-
+<nav><a href="home.html">Home</a><a href="musos.html">Muscicians</a><a href="events.html">Events</a><a href="bullitinboard.html">Bullitin Board</a><a href="livehouse.html">Live House Music</a>Become a member</nav>
+    
+'change livehouse to about us
 <body><div class="musos col m-1col m-2col">
 <h1>Habourside Duo</h1><br>
 <img src="images/Harbourside.jpg" alt="haboursideduo">
