Livehouse to about us

--- a/m1/musos.html
+++ b/m1/musos.html
@@ -6,8 +6,7 @@
 <link href="mainsytle.css" rel="stylesheet" type="text/css">
 </head>
 <div class="container"><header><img src="images/TCMC98Neg.gif" alt="TMC Logo">Townsville Music Centre</header>
-<nav><a href="home.html">Home</a><a href="musos.html">Muscicians</a><a href="events.html">Events</a><a href="bullitinboard.html">Bullitin Board</a><a href="livehouse.html">Live House Music</a>Become a member</nav>
-<nav><a href="home.html">Home</a><a href="musos.html">Muscicians</a><a href="events.html">Events</a><a href="bullitinboard.html">Bullitin Board</a><a href="livehouse.html">Live House Music</a>Become a member</nav>
+<nav><a href="home.html">Home</a><a href="musos.html">Muscicians</a><a href="events.html">Events</a><a href="bullitinboard.html">Bullitin Board</a><a href="aboutus.html">About us</a>Become a member</nav>
     
 'change livehouse to about us
 <body><div class="musos col m-1col m-2col">
