css changes, index and musos

--- a/m1/events.html
+++ b/m1/events.html
@@ -5,14 +5,12 @@
 <title>Townsville Music Center</title>
 <link href="mainsytle.css" rel="stylesheet" type="text/css">
 </head>
-<div class="container"><header><img src="images/TCMC98Neg.gif" alt="TMC Logo">Townsville Music Center</header>
+<div class="container"><header><img src="images/TCMC98Neg.gif" alt="TMC Logo">Townsville Music Centre</header>
 <nav><a href="home.html">Home</a><a href="musos.html">Muscicians</a><a href="events.html">Events</a><a href="bullitinboard.html">Bullitin Board</a><a href="aboutus.html">About us</a>Become a member</nav>
-
-
 
 <body><div class="events">
 <h1>Harbourside Duo</h1>
-<img src="images/Harbourside.jpg" alt="harboursideduo"</img>
+<a href="musos.html#harboursideduo"></a><img src="images/Harbourside.jpg" alt="harboursideduo"/></a>
 <p>Music of Debussy, Ravel, Saint-Saens, sibelius and others. March into Sommarhagen!<br>
 Be seduced by Thais! Or just relax and let the music wash over you.<br>2PM Sunday, 17th May at C2 (Townsville Civic Theatre)<br>
 $25 Adult - $20 Concession - Children 12 and under get in free!.<br>
@@ -37,7 +35,21 @@ Tickets are available at:<br>
     
 </body>
 <footer>
-Townsville Music Center
+<div class="sponsor">
+Sponsors:<br>
+Townsville City Council<br>
+The council's Partnerships and Sponserships scheme provides vital core funding
+which enables us to maintain the admnistrative base for all our other activities,
+and also provides the premises which house our office space.
+The council also assists with the performance venues for our concerts and workshops.
+Queensland Government
+The Gambling Community Benefit Fund has assisted us to obtain office equipment and sound and lighting equipment for our productions.</div>
+<div class="contactdetails">
+Contact Details:<br>
+Phone: 07 4724 2086<br>
+Mobile: 0402 255 182<br>
+Postal Address: PO Box 1006, Townsville, Qld 4810<br>
+Address  Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810<br></div>
 </footer>
 </div>
 </html>
