--- a/m1/bullitinboard.html
+++ b/m1/bullitinboard.html
@@ -5,7 +5,7 @@
 <title>Bulliten Board</title>
 <link href="mainsytle.css" rel="stylesheet" type="text/css">
 </head>
-<div class="container"><header><img src="images/TCMC98Neg.gif" alt="TMC Logo">Townsville Music Center</header>
+<div class="container"><header><img src="images/TCMC98Neg.gif" alt="TMC Logo">Townsville Music Centre</header>
 <nav><a href="home.html">Home</a><a href="musos.html">Muscicians</a><a href="events.html">Events</a><a href="bullitinboard.html">Bullitin Board</a><a href="aboutus.html">About us</a>Become a member</nav>
 <body>
 </body>
