--- a/m1/musos.html
+++ b/m1/musos.html
@@ -7,8 +7,7 @@
 </head>
 <div class="container"><header><img src="images/TCMC98Neg.gif" alt="TMC Logo">Townsville Music Centre</header>
 <nav><a href="home.html">Home</a><a href="musos.html">Muscicians</a><a href="events.html">Events</a><a href="bullitinboard.html">Bullitin Board</a><a href="aboutus.html">About us</a>Become a member</nav>
-    
-'change livehouse to about us
+
 <body><div class="musos col m-1col m-2col">
 <h1>Habourside Duo</h1><br>
 <img src="images/Harbourside.jpg" alt="haboursideduo">
@@ -89,6 +88,6 @@ Contact Details:<br>
 Phone: 07 4724 2086<br>
 Mobile: 0402 255 182<br>
 Postal Address: PO Box 1006, Townsville, Qld 4810<br>
-Address  Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810<br></div>
+    Address  Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810<br></div></div>
 </footer>
 </html>
