css, html, trying stuff out

--- a/m1/events.html
+++ b/m1/events.html
@@ -6,8 +6,15 @@
 <link href="mainsytle.css" rel="stylesheet" type="text/css">
 </head>
 <div class="container"><header><img src="images/TCMC98Neg.gif" alt="TMC Logo">Townsville Music Centre</header>
-<nav><a href="home.html">Home</a><a href="musos.html">Muscicians</a><a href="events.html">Events</a><a href="bullitinboard.html">Bullitin Board</a><a href="aboutus.html">About us</a>Become a member</nav>
-
+<nav>
+    <a href="home.html">Home</a>
+    <a href="musos.html">Muscicians</a>
+    <a href="events.html">Events</a>
+    <a href="bullitinboard.html">Bullitin Board</a>
+    <a href="aboutus.html">About us</a>
+    Become a member
+</nav>
+    
 <body><div class="events">
 <h1>Harbourside Duo</h1>
 <a href="musos.html#harboursideduo"></a><img src="images/Harbourside.jpg" alt="harboursideduo"/></a>
