--- a/m1/musos.html
+++ b/m1/musos.html
@@ -6,8 +6,15 @@
 <link href="mainsytle.css" rel="stylesheet" type="text/css">
 </head>
 <div class="container"><header><img src="images/TCMC98Neg.gif" alt="TMC Logo">Townsville Music Centre</header>
-<nav><a href="home.html">Home</a><a href="musos.html">Muscicians</a><a href="events.html">Events</a><a href="bullitinboard.html">Bullitin Board</a><a href="aboutus.html">About us</a>Become a member</nav>
-
+<nav>
+    <a href="home.html">Home</a>
+    <a href="musos.html">Muscicians</a>
+    <a href="events.html">Events</a>
+    <a href="bullitinboard.html">Bullitin Board</a>
+    <a href="aboutus.html">About us</a>
+    Become a member
+</nav>
+    
 <body><div class="musos col m-1col m-2col">
 <h1>Habourside Duo</h1><br>
 <img src="images/Harbourside.jpg" alt="haboursideduo">
@@ -40,7 +47,7 @@ Tickets are available at:<br>
 <ul>Townsville Civic Theatre</ul>
 <ul>Riverway Arts Center</ul></p></div>
 
-<div class="musos col m-1col m-2col">
+<div class="musos col m-1col m-2col"><a name="harboursideduo">
 <h1>Habourside Duo</h1><br>
 <img src="images/Harbourside.jpg" alt="haboursideduo">
 <p>Presents Dream Serenade.<br>
@@ -54,7 +61,7 @@ Tickets are available at:<br>
 <ul>www.ticketshop.com.au</ul>
 <ul>Phone: 4727 9797</ul>
 <ul>Townsville Civic Theatre</ul>
-<ul>Riverway Arts Center</ul></p></div>
+<ul>Riverway Arts Center</ul></p></a></div>
 
 <div class="musos col m-1col m-2col"><a name="harboursideduo">
 <h1>Habourside Duo</h1><br>
