--- a/m1/events.html
+++ b/m1/events.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Townsville Music Center</title>
+<title>Townsville Music Center - Events</title>
 <link href="mainsytle.css" rel="stylesheet" type="text/css">
 </head>
 <div class="container"><header><img src="images/TCMC98Neg.gif" alt="TMC Logo">Townsville Music Centre</header>
