--- a/m1/musos.html
+++ b/m1/musos.html
@@ -15,7 +15,7 @@
     Become a member
 </nav>
     
-<body><div class="musos col m-1col m-2col">
+<body><div class="musos col m-1col m-2col"><a name="harboursideduo">
 <h1>Habourside Duo</h1><br>
 <img src="images/Harbourside.jpg" alt="haboursideduo">
 <p>Presents Dream Serenade.<br>
@@ -29,9 +29,9 @@ Tickets are available at:<br>
 <ul>www.ticketshop.com.au</ul>
 <ul>Phone: 4727 9797</ul>
 <ul>Townsville Civic Theatre</ul>
-<ul>Riverway Arts Center</ul></p></div>
+<ul>Riverway Arts Center</ul></p></a></div>
 
-<div class="musos col m-1col m-2col">
+<div class="musos col m-1col m-2col"><a name="harboursideduo">
 <h1>Habourside Duo</h1><br>
 <img src="images/Harbourside.jpg" alt="haboursideduo">
 <p>Presents Dream Serenade.<br>
@@ -45,7 +45,7 @@ Tickets are available at:<br>
 <ul>www.ticketshop.com.au</ul>
 <ul>Phone: 4727 9797</ul>
 <ul>Townsville Civic Theatre</ul>
-<ul>Riverway Arts Center</ul></p></div>
+<ul>Riverway Arts Center</ul></p></a></div>
 
 <div class="musos col m-1col m-2col"><a name="harboursideduo">
 <h1>Habourside Duo</h1><br>
@@ -79,7 +79,6 @@ Tickets are available at:<br>
 <ul>Townsville Civic Theatre</ul>
 <ul>Riverway Arts Center</ul></p></a></div>
 
-</p>
 </body>
 <footer><div class="sponsor">
 Sponsors:<br>
