--- a/m1/bullitinboard.html
+++ b/m1/bullitinboard.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Bulliten Board</title>
+<title>Townsville Music Centre - Bulliten Board</title>
 <link href="mainsytle.css" rel="stylesheet" type="text/css">
 </head>
 <div class="container"><header><img src="images/TCMC98Neg.gif" alt="TMC Logo">Townsville Music Centre</header>
